<resources>
    <string name="app_name">Prodigit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_email_address">Insert Email Address</string>
    <string name="insert_password">Insert Password</string>
    <string name="login_button">Login</string>
    <string name="or">or</string>
    <string name="login_with_google"><u>Login with Google</u></string>
    <string name="don_t_you_have_an_account_sign_up">Don\'t you have an account?Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="do_you_already_have_an_account_login">Do you already have an account? Login</string>
    <string name="title_activity_application">ApplicationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_my_reservation">My Reservations</string>
    <string name="title_new_reservation">New Reservation</string>
    <string name="select_building_code">Select Building Code:</string>
    <string name="select_building_name">Select Building Name:</string>
    <string name="search">Search</string>
    <string name="my_reservation_list">My Reservation List:</string>
    <string name="building_code_seat">%s</string>
    <string name="building_sede_ubicazione">%s - %s</string>
    <string name="insert_room">Insert Room:</string>
    <string name="lunedi">Lunedì</string>
    <string name="martedi">Martedì</string>
    <string name="mercoledi">Mercoledì</string>
    <string name="giovedi">Giovedì</string>
    <string name="venerdi">Venerdì</string>
    <string name="sabato">Sabato</string>
    <string name="Day1">%s</string>
    <string name="Day2">%s</string>
    <string name="Day3">%s</string>
    <string name="Day4">%s</string>
    <string name="Day5">%s</string>
    <string name="Day6">%s</string>
    <string name="Day7">%s</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ho_letto_la_dichiarazione_di_responsabilit">I have read the <i>Declaration of Liability</i></string>
    <string name="sono_in_possesso_di_un_green_pass_valido">Possession of a Green Pass (or non-EU equivalent)</string>
    <string name="book">Book</string>
    <string name="use_orientation_system">Use Orientation System</string>
    <string name="news">NEWS</string>
    <string name="welcome_on_prodigit">Welcome on Prodigit</string>
    <string name="remove_account">Remove Account</string>
    <string name="logout">Logout</string>
    <string name="choose_date">Choose Date:</string>
    <string name="seats_available">Seats available:</string>
    <string name="num_available_seats">20</string>
    <string name="declaration_of_liability">Not to go to Sapienza University if I have tested positive for COVID-19. If I have tested positive, I will only go to Sapienza if I have received suitable medical certification, which I undertake to produce on request, showing that "negativisation occured" following the procedures laid down, issued by the local <i>Dipartimento di Prevenzione</i> or other health authority in charge;</string>
    <string name="decleares"><u>DECLARES</u></string>
    <string name="point1">-That I have carefully read the guidelines for students in the "COVID -19 Phase 3: Rules for students and external staff" document, available at https://www.uniroma1.it/en/pagina/airborne-infectious-diseases-italian (or VADEMECUM SULLE MISURE DI PREVENZIONE E PROTEZIONE PER LE ATTIVITA\' DI DIDATTICA IN PRESENZA - C 007 in Italian available at www.uniroma1.it/covid-sapienza) on the correct behaviour to observe during in-person educational activities to prevent the spread of COVID-19 and that I undertake to implement all the recommendations and procedures indicated;</string>
    <string name="point2">-That I have carefully read the documentation published at https://www.uniroma1.it/en/node/202429 (or https://www.uniroma1.it/it/node/202429 in Italian) concerning the correct behaviour to be observed in Sapienza premises to prevent the spread of COVID-19 and that I undertake to implement all the recommendations and procedures indicated;</string>
    <string name="point3">-That every day before going to class, I will check my health condition, making sure: \n I do not have a body temperature higher than 37.5 C° (or 99,5 °F); \n I do not have any flu-like symptoms that can be traced back to COVID-19 (cough, cold, sore throat, burning eyes, difficulty in breathing, acute smell or taste loss or altered sense of taste, etc.) and that I do not have any cohabitants with such symptoms; otherwise I undertake not to go to Sapienza;</string>
    <string name="point4">-Not to go to Sapienza if I am subject to a period of compulsory isolation or quarantine, according to current government regulations.</string>
    <string name="point5">-Not to go to Sapienza if I have tested positive for COVID-19. If I have tested positive, I will only go to Sapienza if I have received suitable medical certification, which I undertake to produce on request, showing that "negativisation occured" following the procedures laid down, issued by the local <i>Dipartimento di Prevenzione</i> or other health authority in charge;</string>
    <string name="and_or">and/or</string>
    <string name="already_booked"><u>You are already booked for that day and that room</u></string>
    <string name="you_need_to_allow_the_location_permission">You need to allow the Location Permission in the settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="see_on_map">button_id</string>
    <string name="news_text">Classroom lesson bookings in the week 31/01/2022 - 05/02/2022 will be available from 24/01/2022 to 30/01/2022 for registration numbers with the last two digits between 00-99</string>

</resources>
