<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constrainLayout"
    tools:context="com.example.prodigit.ui.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <!-- TODO: Update blank fragment layout -->


                <ImageView
                    android:id="@+id/logo_prodigit_login"
                    android:layout_width="260dp"
                    android:layout_height="260dp"
                    android:layout_marginTop="25dp"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logoprodigit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/emailAddressInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="40dp"
                    android:ems="10"
                    android:hint="@string/insert_email_address"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.486"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo_prodigit_login"
                    tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="70dp"
                    android:ems="10"
                    android:hint="@string/insert_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.347"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailAddressInput"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="100dp"
                    android:text="@string/login_button"
                    app:backgroundTint="#822434"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordInput" />

                <ImageButton
                    android:id="@+id/showPassword"
                    android:layout_width="0dp"
                    android:layout_height="27dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="88dp"
                    android:background="@color/white"
                    android:importantForAccessibility="no"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_visibility_24"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@+id/or_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="#000000"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/hidePassword"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="76dp"
                    android:background="@color/white"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_baseline_visibility_off_24"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toTopOf="@+id/or_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="#000000"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/or_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/or"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_button" />

                <TextView
                    android:id="@+id/or_label3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="1dp"
                    android:text="Created by F. Bovi, F. Davidde, V. Ferrazzi"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_go_signup" />

                <TextView
                    android:id="@+id/google_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/login_with_google"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/or_label" />

                <Button
                    android:id="@+id/button_go_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/don_t_you_have_an_account_sign_up"
                    app:backgroundTint="#006778 "
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/google_login" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="220dp"
                    android:layout_marginBottom="12dp"
                    android:background="#00FFFFFF"
                    android:importantForAccessibility="no"
                    android:scaleType="centerInside"
                    android:src="@drawable/googlelogo"
                    app:layout_constraintBottom_toTopOf="@+id/button_go_signup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/google_login" />


        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>