<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prodigit.ui.home.HomeFragment">

        <TextView
            android:id="@+id/welcome_string"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@color/blue_sapienza"
            android:elegantTextHeight="true"
            android:gravity="center"
            android:lines="5"
            android:singleLine="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/news"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/home_style"
            android:gravity="center"
            android:lines="5"
            android:singleLine="false"
            android:text="@string/welcome_on_prodigit"
            android:textColor="@color/bordeaux_sapienza2"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:background="@drawable/home_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_string"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="320dp"
            android:layout_height="200dp"
            android:text="@string/news_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/welcome_string"
            app:layout_constraintEnd_toEndOf="@+id/welcome_string"
            app:layout_constraintStart_toStartOf="@+id/welcome_string"
            app:layout_constraintTop_toTopOf="@+id/welcome_string"
            app:layout_constraintVertical_bias="0.49" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:src="@drawable/map"
            app:layout_constraintEnd_toEndOf="@+id/welcome_string"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/news" />

        <Button
            android:id="@+id/go_orientation_button"
            android:layout_width="171dp"
            android:layout_height="78dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/use_orientation_system"
            app:backgroundTint="@color/bordeaux_sapienza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.933"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_string"
            app:layout_constraintVertical_bias="0.913"
            tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>