<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLayout"
    tools:context="com.example.prodigit.ui.signup.SignUpFragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <TextView
                    android:id="@+id/or_label4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="1dp"
                    android:text="Created by F. Bovi, F. Davidde, V. Ferrazzi"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_go_login" />

                <ImageButton
                    android:id="@+id/hidePasswordConfirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:importantForAccessibility="no"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_visibility_off_24"
                    android:visibility="invisible"
                    app:layout_constraintStart_toStartOf="@+id/showPasswordConfirm"
                    app:layout_constraintTop_toTopOf="@+id/passwordConfirmInputSignUp"
                    app:tint="#000000"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:src="@drawable/ic_baseline_visibility_off_24" />

                <ImageButton
                    android:id="@+id/showPasswordConfirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:importantForAccessibility="no"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_visibility_24"
                    android:visibility="visible"
                    app:layout_constraintStart_toEndOf="@+id/passwordConfirmInputSignUp"
                    app:layout_constraintTop_toTopOf="@+id/passwordConfirmInputSignUp"
                    app:tint="#000000"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/hidePasswordInsert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:background="@color/white"
                    android:importantForAccessibility="no"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_visibility_off_24"
                    android:visibility="invisible"
                    app:layout_constraintStart_toEndOf="@+id/passwordInputSignUp"
                    app:layout_constraintTop_toTopOf="@+id/passwordInputSignUp"
                    app:tint="#000000"
                    tools:ignore="SpeakableTextPresentCheck"
                    tools:src="@drawable/ic_baseline_visibility_off_24" />

                <ImageButton
                    android:id="@+id/showPasswordInsert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:importantForAccessibility="no"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_visibility_24"
                    android:visibility="visible"
                    app:layout_constraintStart_toEndOf="@+id/passwordInputSignUp"
                    app:layout_constraintTop_toTopOf="@+id/passwordInputSignUp"
                    app:tint="#000000"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageView
                    android:id="@+id/logo_prodigit_login2"
                    android:layout_width="260dp"
                    android:layout_height="260dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="52dp"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logoprodigit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/passwordConfirmInputSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="100dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordInputSignUp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/button_go_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="21dp"
                    android:layout_marginEnd="70dp"
                    android:text="@string/do_you_already_have_an_account_login"
                    app:backgroundTint="#006778 "
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signup_button" />

                <EditText
                    android:id="@+id/emailAddressInputSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="40dp"
                    android:ems="10"
                    android:hint="@string/insert_email_address"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.486"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo_prodigit_login2"
                    tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

                <EditText
                    android:id="@+id/passwordInputSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="100dp"
                    android:ems="10"
                    android:hint="@string/insert_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailAddressInputSignUp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <Button
                    android:id="@+id/signup_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="100dp"
                    android:text="@string/signup"
                    app:backgroundTint="#822434"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passwordConfirmInputSignUp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
